# commander-rs

./: Cargo.toml  Dockerfile  README.md  install.sh  spec.yml  videosmover.service
config/: settings.toml  settings_test.toml
src/: command.rs  config.rs  db.rs  download.rs  files.rs  http.rs  lib.rs  main.rs  mongo.rs  moving.rs  openapi.rs  rename.rs  search.rs  tests.rs  tmdb.rs
src/command/: reboot.rs  shutdown.rs
src/rename/: cache.rs  disk.rs  external.rs  name.rs  online_cache.rs  tmdb.rs
tests/: command.rs  download.rs  moving.rs  rename.rs  search.rs
