[package]
name = "commander"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.74"
axum = "0.6.20"
chrono = "0.4.31"
config = "0.13.3"
edit-distance = "2.1.0"
eyre = "0.6.8"
futures = "0.3.28"
mongodb = "2.7.0"
once_cell = "1.18.0"
rand = "0.8.5"
regex = "1.10.2"
reqwest = "0.11.22"
serde = { version = "1.0.189", features = ["derive"] }
stable-eyre = "0.2.2"
testcontainers = "0.15.0"
thiserror = "1.0.50"
tokio = { version = "1.33.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["trace", "cors"] }
tracing = "0.1.40"
tracing-log = "0.1.3"
tracing-subscriber = "0.3.17"
tree_magic_mini = { version = "3.0.3", features = ["tree_magic_db", "with-gpl-data"]}
walkdir = "2.4.0"
