[package]
name = "commander"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gen-openapi"
path = "./src/openapi.rs"

[dependencies]
aho-corasick = "1.1.2"
async-trait = "0.1.74"
axum = "0.6.20"
chrono = "0.4.31"
config = "0.13.3"
edit-distance = "2.1.0"
enum_dispatch = "0.3.12"
eyre = "0.6.8"
futures = "0.3.28"
mongodb = "2.7.0"
rand = "0.8.5"
regex = "1.10.2"
reqwest = { version = "0.11.22", features = ["json"]}
serde = { version = "1.0.189", features = ["derive"] }
stable-eyre = "0.2.2"
thiserror = "1.0.50"
testcontainers = "0.15.0"
tokio = { version = "1.33.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["trace", "cors"] }
tracing = "0.1.40"
tracing-log = "0.1.3"
tracing-subscriber = "0.3.17"
tree_magic_mini = { version = "3.0.3", features = ["tree_magic_db", "with-gpl-data"]}
walkdir = "2.4.0"
utoipa = { version = "4.1.0", features = ["axum_extras", "yaml", "chrono"] }
serde_json = "1.0.108"
utoipa-swagger-ui = { version = "4.0.0", features = ["axum"] }
